mejorar algunas advertencias del código