@@ -11,7 +11,6 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
 import java.util.Properties;
-import java.util.stream.Collectors;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -126,7 +125,7 @@ public final class AppConfig {
         .map(String::trim)
         .filter(str -> !str.isEmpty())
         .map(str -> str.toLowerCase(Locale.ROOT))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private Path resolvePath(String value) {
